[package]
name = "jeopardytool"
version = "0.1.0"
edition = "2021"
authors = ["Björn Guth <scatty@bguth.de>"]
description = "A small tool to show, create and convert categories for a jeopardy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "^3.1", features = ["derive"]}
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
rand = "^0.8"

[dev-dependencies]
proptest = "^1.0"
